2007-11-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: add clear_locks (Caps_Lock, etc) action.  Fix
	  ssh tunnel on Darwin.

2007-10-27  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix ncache bug and others under -8to24, -ssh
	  option, socks and other proxies in -proxy option.
	  compiler warnings.  fix TARGETS selection request bug
	  (java, konsole).

2007-10-03  Karl Runge <runge@karlrunge.com>
	* x11vnc: add xfce to createdisplay

2007-09-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: COLUMNS=256 to find/create scripts. More ratecheck.

2007-09-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: Add -sshxdmsvc. Fix find_display for inetd.  Improve
	  -allinput method; env CHECK_RATE to watch for FBUR build up
	  (i.e. JFVNC).

2007-09-11  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix wireframe crash under -clip.  Add -redirect for
	  VNC redir.  -rawfb nullbig, randbig, solid, swirl, etc.
	  FD_XDM mode to find_display.	-listdpy.  Add enlightenment.
	  Xvnc.redirect FINDDISPLAY-vnc_redirect. -xvnc, -xvnc_redirect,
	  -svc_xvnc. AUTO_PORT.
	* ssvnc: sshvnc ssh-only, tsvnc Terminal Services modes.
	  Improvements to ss_vncviewer.  Automatically find X dpy and
	  X login.  Reorganize menus a bit.  ~/.ssvncrc file.

2007-09-04  Karl Runge <runge@karlrunge.com>
	* x11vnc: Add -autoport and -finddpy utils. -xdummy creation.
	  tweak xkb tiebreaking again.  Shut off -ncache in dev mode.
	  watch for xrandr events even if no -xrandr.  Tips for types
	  of URLs for java viewers.  Add check_redir_services() to
	  create_display and tsdo() redir helper utility (-tsd).
	  Improvements to Xdummy.  Prevent dcop XAUTHORITY=''

2007-08-19  Karl Runge <runge@karlrunge.com>
	* x11vnc: better -xkb tie-breaking for up keystrokes.  Add 
	  Xsrv/FD_XSRV custom server to FINDCREATEDISPLAY list.

2007-08-18  Karl Runge <runge@karlrunge.com>
	* x11vnc: improve FINDCREATEDISPLAY (-create) script.  Document
	  FD_GEOM, FD_SESS, FD_OPTS, FD_PROG env vars, add Xvnc support. 
