@@ -1,5 +1,5 @@
 
-x11vnc README file                         Date: Wed Nov  7 17:16:51 EST 2007
+x11vnc README file                         Date: Sat Dec 15 19:10:20 EST 2007
 
 The following information is taken from these URLs:
 
@@ -4135,16 +4135,17 @@ x11vnc -logfile $HOME/.x11vnc.log -rfbauth $HOME/.vnc/passwd -forever -bg
    You next connect to x11vnc with a VNC viewer, give your username and
    password to the X login prompt to start your session.
 
-   Note:  gdm seems to have an annoying setting that causes x11vnc (and
-   any other X clients) to be killed after the user logs in. Setting
+   Note:  GDM: gdm seems to have an annoying setting that causes x11vnc
+   (and any other X clients) to be killed after the user logs in. Setting
    KillInitClients=false in the [daemon] section of /etc/X11/gdm/gdm.conf
-   avoids this. Otherwise, just restart x11vnc and then reconnect your
-   viewer. Other display managers (kdm, etc) may also have a similar
-   problem.
+   (or /etc/gdm/gdm.conf, etc.) avoids this. Otherwise, just restart
+   x11vnc and then reconnect your viewer. Other display managers (kdm,
+   etc) may also have a similar problem. One user reports having to alter
+   "gdm.conf-custom" as well.
 
-   Note:  For dtlogin in addition to the above sort of trick (BTW, the
-   auth file should be in /var/dt), you'll also need to add something
-   like Dtlogin*grabServer:False to the Xconfig file
+   Note:  Solaris: For dtlogin in addition to the above sort of trick
+   (BTW, the auth file should be in /var/dt), you'll also need to add
+   something like Dtlogin*grabServer:False to the Xconfig file
    (/etc/dt/config/Xconfig or /usr/dt/config/Xconfig on Solaris, see
    [585]the example at the end of this FAQ). Then restart dtlogin, e.g.:
    /etc/init.d/dtlogin stop; /etc/init.d/dtlogin start or reboot.
@@ -4174,8 +4175,9 @@ x11vnc -logfile $HOME/.x11vnc.log -rfbauth $HOME/.vnc/passwd -forever -bg
    watch out for.
 
    Note:  The above gdm setting of KillInitClients=false in
-   /etc/X11/gdm/gdm.conf for GDM is needed here as well. Other display
-   managers (KDM, etc) may also have a similar problem.
+   /etc/X11/gdm/gdm.conf (or /etc/gdm/gdm.conf, etc.) for GDM is needed
+   here as well. Other display managers (KDM, etc) may also have a
+   similar problem.
 
    Note:  The above Dtlogin*grabServer:False step for Solaris will be
    needed for dtlogin here as well.
@@ -4202,8 +4204,8 @@ x11vnc -logfile $HOME/.x11vnc.log -rfbauth $HOME/.vnc/passwd -forever -bg
   /usr/local/bin/x11vnc -rfbauth /etc/x11vnc.passwd -forever -bg -o /var/log/x1
 1vnc.log
 
-   And then add this line to /etc/X11/gdm/gdm.conf in the [daemon]
-   section:
+   And then add this line to /etc/X11/gdm/gdm.conf (or /etc/gdm/gdm.conf,
+   etc.) in the [daemon] section:
   KillInitClients=false
 
    Then restart: /usr/sbin/gdm-restart (or reboot). The
@@ -8000,8 +8002,9 @@ or:
    Q-124: Thanks for your program and for your help! Can I make a
    donation?
 
-   Please do (any amount is appreciated) and thank you for your support!
-   Click on the PayPal button below for more info.
+   Please do (any amount is appreciated; only a handful of people have
+   donated anything) and thank you for your support! Click on the PayPal
+   button below for more info.
 
    [PayPal]
 
@@ -11839,7 +11842,7 @@ x11vnc: a VNC server for real X displays
    Here are all of x11vnc command line options:
 % x11vnc -opts      (see below for -help long descriptions)
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-11-07
+x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-12-15
 
 x11vnc options:
   -display disp            -auth file               -N                     
@@ -11958,7 +11961,7 @@ libvncserver-tight-extension options:
 
 % x11vnc -help
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-11-07
+x11vnc: allow VNC connections to real X11 displays. 0.9.4 lastmod: 2007-12-15
 
 (type "x11vnc -opts" to just list the options.)
 
