@@ -848,15 +848,27 @@ char find_display[] =
 "# who(1) output column 2:\n"
 "#gone=`last $user | grep 'gone.*no.logout' | awk '{print $2}' | grep '^:' | sed -e 's,/.*,,' | tr '\\n' '|'`\n"
 "#gone=\"${gone}__quite_impossible__\"\n"
-"#display=`who | grep \"^${user}[ 	][ 	]*:[0-9]\" | egrep -v \" ($gone)\\>\" | head -n 1 \\\n"
+"#display=`who 2>/dev/null | grep \"^${user}[ 	][ 	]*:[0-9]\" | egrep -v \" ($gone)\\>\" | head -n 1 \\\n"
 "#    | awk '{print $2}' | sed -e 's,/.*$,,'`\n"
 "poss=\"\"\n"
-"list=`who | grep \"^${user}[ 	][ 	]*:[0-9]\" | awk '{print $2}' | sed -e 's,/.*$,,'`\n"
-"list=\"$list \"`w -h \"$user\" | grep \"^${user}[ 	][ 	]*:[0-9]\" | awk '{print $2}' | sed -e 's,/.*$,,'`\n"
-"list=\"$list \"`who | grep \"^${user}[ 	]\" | awk '{print $NF}' | grep '(:[0-9]' | sed -e 's/[()]//g'`\n"
-"host=`hostname | sed -e 's/\\..*$//'`\n"
+"list=`who 2>/dev/null | grep \"^${user}[ 	][ 	]*:[0-9]\" | awk '{print $2}' | sed -e 's,/.*$,,'`\n"
+"list=\"$list \"`w -h \"$user\" 2>/dev/null | grep \"^${user}[ 	][ 	]*:[0-9]\" | awk '{print $2}' | sed -e 's,/.*$,,'`\n"
+"list=\"$list \"`who 2>/dev/null | grep \"^${user}[ 	]\" | awk '{print $NF}' | grep '(:[0-9]' | sed -e 's/[()]//g'`\n"
+"host=`hostname 2>/dev/null | sed -e 's/\\..*$//'`\n"
 "if [ \"X$X11VNC_FINDDISPLAY_SKIP_XAUTH\" = \"X\" ]; then\n"
 "	list=\"$list \"`xauth list | awk '{print $1}' | grep /unix | grep \"^${host}\" | sed -e 's/^.*:/:/' | sort -n | uniq`\n"
+"fi\n"
+"\n"
+"if [ \"X$uname\" = \"XDarwin\" ]; then\n"
+"	if who 2>/dev/null | grep -i \"^${user}[ 	][ 	]*console[ 	]\" > /dev/null; then\n"
+"		echo \"DISPLAY=console\"\n"
+"		if [ \"X$FIND_DISPLAY_ALL\" = \"X\" ]; then\n"
+"			if [ \"X$showxauth\" != \"X\" ]; then\n"
+"				echo \"\"\n"
+"			fi\n"
+"			exit 0\n"
+"		fi\n"
+"	fi\n"
 "fi\n"
 "\n"
 "for p in $list\n"
