@@ -1,8 +1,8 @@
 .\" This file was automatically generated from x11vnc -help output.
-.TH X11VNC "1" "November 2007" "x11vnc " "User Commands"
+.TH X11VNC "1" "December 2007" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.9.4, lastmod: 2007-11-07
+         version: 0.9.4, lastmod: 2007-12-15
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
